--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "beyondcode/laravel-dump-server",
+    "name": "test/test",
     "description": "Symfony Var-Dump Server for Laravel",
     "keywords": [
         "beyondcode",
@@ -8,48 +8,28 @@
     "homepage": "https://github.com/beyondcode/laravel-dump-server",
     "license": "MIT",
     "authors": [
-        {
-            "name": "Marcel Pociot",
-            "email": "marcel@beyondco.de",
-            "homepage": "https://beyondco.de",
-            "role": "Developer"
-        }
+
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/console": "5.6.*|5.7.*|5.8.*",
-        "illuminate/http": "5.6.*|5.7.*|5.8.*",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*",
-        "symfony/var-dumper": "^4.1.1"
+
     },
     "require-dev": {
-        "larapack/dd": "^1.0",
-        "phpunit/phpunit": "^7.0"
+
     },
     "autoload": {
         "psr-4": {
-            "BeyondCode\\DumpServer\\": "src"
-        },
-        "files": [
-            "helpers.php"
-        ]
+            "Teszt\\": "src"
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "BeyondCode\\DumpServer\\Tests\\": "tests"
+            "Teszt\\Tests\\": "tests"
         }
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-    },
-    "config": {
-        "sort-packages": true
     },
     "extra": {
         "laravel": {
             "providers": [
-                "BeyondCode\\DumpServer\\DumpServerServiceProvider"
+                "Teszt\\Teszt"
             ]
         }
     }
